# mps-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-project.lua  notes.md
aerolib/: CMakeLists.txt  aerolib.vcxproj.filters  premake5.lua
aerolib/src/aero/core/: application.cpp  application.h  assert.h  buffer.h  entrypoint.h  layer.h  log.h  threads.cpp  threads.h  timer.h
aerolib/src/aero/networking/: server.cpp  server.h  socket.h  utils.h
application/: CMakeLists.txt
application/src/: console.h  mps-emulator.cpp  server-layer.cpp  server-layer.h
application/src/scanivalve/: mps.cpp  mps.h
application/src/utils/: args.h  string-utils.h
cmake/: resources.rc.in  version.h.in
data/251/251-working/: Cat.cfg  Filt.cfg  MPS207.tar  MPS4000.BIT  Mps4000.hex  Rpt0251.csv  calval.htm  databar.htm  ftp.cfg  home.htm  idframe.htm  index.htm  ip.cfg  navframe.htm  ptp.cfg  remote.htm  scan.cfg  setup.htm  tar.ndx  term.htm  udp.cfg
data/mps-4264-251-cfg/cfg/: Cal.cfg  Oven.cfg  Tgain.cfg  fc.cfg  hw.cfg  id.cfg
mps-server/: premake5.lua
mps-server/src/: console.cpp  console.h  main.cpp  mps-emulator.cpp  mps-emulator.h  mps.h  networking.h  server-layer.cpp  server-layer.h  version.h
mps-server/src/scanivalve/: mps-cmd.h  mps-config.h  mps-data.h  mps.cpp  mps.h
mps-server/src/utils/: args.h  string-utils.cpp
prototype/: mps-emulator.py  mps.py  networking-dep.py  networking.py
scripts/: msbuild-clean.bat  msbuild.bat  setup-vs2022.bat  setup.bat  spawn.bat
